--- a/templates/base.html
+++ b/templates/base.html
@@ -5,36 +5,63 @@
 
 <head>
     <title>Django blog</title>
+    <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:ǓǏǏ" rel="stylesheet">
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,
-    initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no ">
+    <link rel="stylesheet " href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css ">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "></script>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+
 </head>
 
 <body>
-    <div>
-        <header>
-            <div class="nav-left">
-                <h1><a href="{% url 'home' %}">Fauzia's blog</a></h1>
-            </div>
-            <div class="nav-right">
-                <a href="{% url 'post_new' %}">+ New Blog Post</a>
-            </div>
-        </header>
-        {% if user.is_authenticated %}
-        <p>Hi {{ user.username }}!</p>
-        <p><a href="{% url 'logout' %}">Log out</a></p>
-        {% else %}
-        <p>You are not logged in.</p>
-        <a href="{% url 'login' %}">Log In</a> {% endif %} {% block content %} {% endblock content %}
-    </div>
+    
+    <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light shadow ">
+                <a class = "navbar-brand font-weight-bold text-danger " href="{% url 'home' %} ">Fauzia's blog</a>
+                <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
+                      <span class="navbar-toggler-icon "></span>
+                </button>
+                  
+                <div class="collapse navbar-collapse " id="navbarSupportedContent ">
+                    <ul class="navbar-nav ml-auto ">
+                        
+                        <li class="nav-item ">
+                             <a class="nav-link btn btn-sm btn-success text-white mr-3 "  href="{% url 'post_new' %} ">+ New Blog Post</a>
+                        </li>
+
+                        {% if user.is_authenticated %}
+
+                            <li class="nav-item ">
+                                <a class="nav-link mr-3 "  href="{% url 'logout' %} ">Log out</a>
+                            </li>
+
+                        {% else %}
+
+                            <li class="nav-item ">
+                                <a class="nav-link btn btn-sm btn-outline-success mr-3 "  href="{% url 'login' %} ">Log in</a>
+                            </li>
+
+                        {% endif %}
+
+                    </ul>
+                        
+                    
+                </div>
+            </nav>
+        
+
+ <div class="container ">
+    {% block content %}
+
+           
+
+    {% endblock content %}
+
+</div>
+
+    
 </body>
 
 </html>
