--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,15 @@
-<!DOCTYPE html> {% extends 'base.html' %} {% block content %} {% for post in object_list %}
-<div class="post-entry">
-    <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-    <p>{{ post.body }}</p>
+<!DOCTYPE html> {% extends 'base.html' %} {% block content %}
+<div class="row m-0 p-0">
+
+    <div class="col-md-6 ml-md-auto mr-md-auto">
+        {% for post in object_list %}
+        <div class="post-entry">
+            <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.body }}</p>
+        </div>
+        {% endfor %}
+
+    </div>
 </div>
-{% endfor %} {% endblock content %}
+
+{% endblock content %}
