--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 {% extends 'base.html' %} {% block content %}
-<h1>Delete post</h1>
-<form action="" method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ post.title }}"?</p>
-    <input type="submit" value="Confirm" />
-</form>
+<div class="row m-0 p-0">
+
+    <div class="col-md-6 ml-md-auto mr-md-auto">
+        <h1>Delete post</h1>
+        <form action="" method="post">{% csrf_token %}
+            <p>Are you sure you want to delete "{{ post.title }}"?</p>
+            <input type="submit" value="Confirm" />
+        </form>
+    </div>
+</div>
 {% endblock content %}
 
 </html>
