--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
 <h2>Log In</h2>
 <form method="post">
-    {% csrf_token %} {{ form.as_p }}
+    {% csrf_token %} {{ form|crispy }}
     <button type="submit">Log In</button>
 </form>
 {% endblock content %}
